2022-06-28  Charlie Zender  <zender@uci.edu>

	* NCO 5.0.8 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.0.8: Iron Champs';git push
	git tag -a 5.0.8 -m 'all: filters, cmp_sng, CCR, nc 4.9.0; ncremap fix sub-sgs nrm, add ssgs thr';git push --tags

	* Add debug message clarifying where/why coordinate-like variables not lossily compressed

	* Prepend _Filter help string with "Codec(s): "

	* Recognize codec names spelled with optional spaces and hyphens

	* Add --cmp_sng to usage, man pages

	* NCO 5.0.8-beta02 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.0.8-beta02: Iron Champs';git push
	git tag -a 5.0.8-beta02 -m 'all: xcl cf crd_lk_var from lsy flt';git push --tags

2022-06-27  Charlie Zender  <zender@uci.edu>

	* Print filter names in CDL comments for _Filter when dbg >= 2

	* Remove DEFLATE, Shuffle, and Fletcher32 from Filter string. Always print them separately.

	* Prevent calling BLOSC filter on variables of storage type NC_CONTIGUOUS

	* Write nco_is_crd_var() and preserve full precision (prevent lossy filters) on bonafide 1D coordinates

	* Preserve full precision (prevent lossy filters) on CF bounds, climatology, coordinates, and grid_mapping variables

2022-06-26  Charlie Zender  <zender@uci.edu>

	* Reset rcd to NC_NOERR after non-fatal filter errors

	* Verify netCDF library quantization yields same CRs as NCO library quantization

	* Prevent attempted quantization of non-floating-point variables (to avoid bad return codes from netCDF)

2022-06-24  Charlie Zender  <zender@uci.edu>

	* NCO 5.0.8-beta01 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.0.8-beta01: Rothaniel';git push
	git tag -a 5.0.8-beta01 -m 'Filterama';git push --tags

	* Prepare release notes

	* Clip erroneous trailing commas from inferred filter strings for filters with zero parameters (like Fletcher32)

	* Re-protect nco_flt_def_wrp() call within NETCDF4 ifdefs in nco_grp_utl.c

	* NCO 5.0.8-alpha06 release procedure: