@@ -4,6 +4,8 @@
 	cd ~/nco;git commit -a -m 'Version 5.0.8: Iron Champs';git push
 	git tag -a 5.0.8 -m 'all: filters, cmp_sng, CCR, nc 4.9.0; ncremap fix sub-sgs nrm, add ssgs thr';git push --tags
 
+	* Insert default in place of omitted levels for DEFLATE, Shuffle, Zstandard, regardless of filter location
+
 	* Add debug message clarifying where/why coordinate-like variables not lossily compressed
 
 	* Prepend _Filter help string with "Codec(s): "
